# portfoliodashb

./: .gitignore  README.md  config.py  config.yaml  constants.py  crawler.py  main.py  metadata_parser.py  pyproject.toml
.portfoliodb/: description.md
portfoliodashb/: config.py  constants.py  crawler.py  git.py  main.py  metadata_parser.py  progressbar.py
